--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "googleapis": "^113.0.0",
     "mapbox-gl": "^2.11.1",
+    "moment": "^2.30.1",
     "next": "12.1.6",
     "papaparse": "^5.4.0",
     "react": "18.1.0",
